# genriesz

./: ExperimentalResults.ipynb  ExperimentalStudy.ipynb  IHDP_for_DirectBiasCorrectionTermEstimation-Copy1.ipynb  IHDP_for_DirectBiasCorrectionTermEstimation.ipynb  README.md  grr.py  nn_grr.py  pyproject.toml  result  rkhs_grr.py  true_simulation_study.csv
DirectBiasCorrection/: ATE_result1.csv  ATE_result2.csv  ATE_result3.csv  ATE_result4.csv  ExperimentalStudy.ipynb  ForestRiesz_IHDP.ipynb  RieszNet_IHDP.ipynb  SimulationStudy_Full_case1.ipynb  SimulationStudy_Full_case2-Copy3.ipynb  SimulationStudy_Full_case2.ipynb  SimulationStudy_Full_case_temp.ipynb  SimulationStudy_case1-Copy1.ipynb  SimulationStudy_case2.ipynb  SimulationStudy_case3.ipynb  SimulationStudy_case4.ipynb  kernel_regression.py  memo.ipynb  実験結果.ipynb
docs/: api.rst  conf.py  examples.rst  getting_started.rst  index.rst  references.rst  user_guide.rst
examples/: ame_synthetic_glm.py  ape_synthetic_glm.py  ate_synthetic.py  ate_synthetic_glm.py  ate_synthetic_glm_nn_basis.py  ate_synthetic_glm_polynomial.py  ate_synthetic_glm_rf_leaf_basis.py  ate_synthetic_glm_rkhs_rff.py  ate_synthetic_nn_matching.py
notebooks/: Experiment_for_DirectBiasCorrectionTermEstimation.ipynb  ExperimentalResults.ipynb  ExperimentalStudy.ipynb  GRR_end_to_end_examples.ipynb  IHDP_for_DirectBiasCorrectionTermEstimation.ipynb
results/: nn_bkl_simulation_study.csv  nn_kl_simulation_study.csv  nn_linear_sq_simulation_study.csv  nn_logit_sq_simulation_study.csv  nn_tl_simulation_study.csv  nn_ukl_simulation_study.csv  nn_with_D_ukl_simulation_study.csv  (+7 more)
(+1 files in other folders)
